fix: fixed invisible overlap (#19)

--- a/src/components/CreateProfile/CreateProfileForm/CreateProfileForm.scss
+++ b/src/components/CreateProfile/CreateProfileForm/CreateProfileForm.scss
@@ -74,6 +74,7 @@
     @extend .profileform-navigation;
 
     justify-content: center;
+    z-index: 2;
   }
 }
 
